--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native": "0.75.3",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.20.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0"
   },
@@ -35,6 +36,7 @@
     "@react-native/metro-config": "0.75.3",
     "@react-native/typescript-config": "0.75.3",
     "@types/react": "^18.2.6",
+    "@types/react-native-linear-gradient": "^2.3.1",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
