--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-reanimated": "^3.15.1",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
+    "react-native-sensors": "^7.3.6",
     "react-native-svg": "^15.15.0",
     "react-native-vector-icons": "^10.3.0"
   },
