--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -15,13 +15,13 @@
     <uses-permission android:name="android.permission.USE_EXACT_ALARM" />
 
     <application
-      android:name=".MainApplication"
-      android:label="@string/app_name"
-      android:icon="@mipmap/ic_launcher"
-      android:roundIcon="@mipmap/ic_launcher_round"
-      android:allowBackup="false"
-      android:theme="@style/AppTheme"
-      android:supportsRtl="true">
+    android:name=".MainApplication"
+    android:label="@string/app_name"
+    android:icon="@mipmap/namazvakti_logo5"
+    android:roundIcon="@mipmap/namazvakti_logo5"
+    android:allowBackup="false"
+    android:theme="@style/AppTheme"
+    android:supportsRtl="true">
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
