--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native-screens": "^3.34.0",
     "react-native-sensors": "^7.3.6",
     "react-native-svg": "^15.15.0",
-    "react-native-vector-icons": "^10.3.0"
+    "react-native-vector-icons": "^10.3.0",
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
