--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -43,6 +43,8 @@
               <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
               <action android:name="com.namazvakti.UPDATE_WIDGET" />
               <action android:name="com.namazvakti.WIDGET_UPDATE_ALARM" />
+              <action android:name="android.intent.action.TIME_SET" />
+              <action android:name="android.intent.action.TIMEZONE_CHANGED" />
           </intent-filter>
           <meta-data
               android:name="android.appwidget.provider"
