kalıcı bildirim servisini öldükten sonra yeniden başlatma eklendi + kalıcı bildirimi en üstte gösterme yöntemleri düzenlendi + gps açıkken manuel konum farklı bir konuma işaret ediyorsa konumunuzun değiştiğini farkettik uyarısı eklendi +location pickera scroll cache eklendi +location picker optimize edildi + local saatlerdeki sorun giderildi

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -71,5 +71,11 @@
           </intent-filter>
       </receiver>
 
+      <receiver
+          android:name=".ServiceRestartReceiver"
+          android:enabled="true"
+          android:exported="false">
+      </receiver>
+
     </application>
 </manifest>
