App.tsx dosyası anlamlı dosyalara bölündü + harita üzerinden vakit getirme eklendi

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -51,6 +51,11 @@
               android:resource="@xml/prayer_times_widget_info" />
       </receiver>
 
+      <!-- Google Maps API Key -->
+      <meta-data
+          android:name="com.google.android.geo.API_KEY"
+          android:value="AIzaSyDiN9bzwNU5qvMicj9Ywbfxwd1AuoKnsyk" />
+
       <service
           android:name=".PrayerTimesService"
           android:enabled="true"
