--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-sensors": "^7.3.6",
     "react-native-svg": "^15.15.0",
     "react-native-vector-icons": "^10.3.0",
+    "react-native-webview": "^13.16.0",
     "sharp": "^0.34.5"
   },
   "devDependencies": {
